users can register now and saved into database

--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -30,6 +30,12 @@
       </a>
     </div>
 
+    <div>
+      <a th:href="@{/registration}">
+        <button>Register Here</button>
+      </a>
+    </div>
+
   </body>
 
 </html>
