--- a/demo/src/main/resources/templates/registration.html
+++ b/demo/src/main/resources/templates/registration.html
@@ -9,31 +9,33 @@
   <body>
     <h2> Register Here <h2>
 
-      <form method="POST" th:action="@{/register}" th:object="${user}">
+      <form action=# method="post" th:action="@{/register}" th:object="${user}">
 
         <label for="username">Username: </label>
-        <input type="text" name="username"/></br>
+        <input type="text" name="username" th:field="*{username}"/></br>
 
         <label for="password">Password: </label>
-        <input type="password" name="password"/></br>
+        <input type="password" name="password" th:field="*{password}"/></br>
 
-        <label for="confirmPassword"> Confirm Password: </label>
-        <input type="password" name="confirmPassword"/></br>
+        <label for="fullName">Full Name: </label>
+        <input type="text" name="fullName" th:field="*{fullName}"/></br>
 
         <label for="street">Street: </label>
-        <input type="text" name="street"/></br>
+        <input type="text" name="street" th:field="*{street}"/></br>
 
         <label for="city">City: </label>
-        <input type="text" name="city"/></br>
+        <input type="text" name="city" th:field="*{city}"/></br>
 
         <label for="state">State: </label>
-        <input type="text" name="state"/></br>
+        <input type="text" name="state" th:field="*{state}"/></br>
 
         <label for="zipCode">Zip Code: </label>
-        <input type="text" name="zipCode"/></br>
+        <input type="text" name="zipCode" th:field="*{zipCode}"/></br>
 
-        <label for="phone">Phone Number: </label>
-        <input type="text" name="phone"/></br>
+        <label for="phoneNumber">Phone Number: </label>
+        <input type="text" name="phoneNumber" th:field="*{phoneNumber}"/></br>
+
+        <input type="submit" name="Register"/></br>
 
       </form>
 
