--- a/demo/src/main/resources/templates/fictions/bookDetails.html
+++ b/demo/src/main/resources/templates/fictions/bookDetails.html
@@ -15,6 +15,8 @@
       <dt th:text="${book.author}">author</dt>
       <dt th:text="${book.price}">price</dt>
       <dt th:text="${book.genre}">genre</dt>
+      <dt><a th:href="@{/addToCart}">Add to Cart</a></dt>
+      <hr>
     </dl>
 
   </body>
