--- a/demo/src/main/resources/templates/fictions/bookDetails.html
+++ b/demo/src/main/resources/templates/fictions/bookDetails.html
@@ -11,7 +11,7 @@
     <h1> These are some books </h1>
 
     <button type="button"> 
-      <a th:href="@{/viewCart}">
+      <a th:href="@{/myCart}">
         View Cart
       </a>
     </button>
